# coursework3

./: README.md  pyproject.toml
coursework3/: main.py
coursework3/utils/: class_operation.py  get_file.py  operations_file_edit.py
tests/: test_class_operation.py  test_get_file.py  test_operations_file_edit.py
